--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
-version: '3'
 services:
-  app:
-    build: .
-    ports:
-      - "3000:3000"
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/todos
-    depends_on:
-      - mongo
-
   mongo:
     image: mongo
     ports:
       - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+  app:
+    build: .
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mongo
+    environment:
+      - MONGODB_URI=mongodb://mongo:27017/todos
+
+volumes:
+  mongo-data:
